# honeygen-v2

./: .gitignore  README.md
pyside-pin-instruction-logger/: README.md  pyproject.toml  requirements.txt  run_app.py
pyside-pin-instruction-logger/pin-tool/: ins_logger.cpp  makefile  makefile.rules
pyside-pin-instruction-logger/scripts/: build_tool.sh  compare_runs.py  fetch_service_binaries.py  revng  run_with_pin.py  sanitize_from_logs.py  setup_sshd_honeypot.sh  sudo_metrics_sidecar.py
pyside-pin-instruction-logger/src/: app.py  config_manager.py
pyside-pin-instruction-logger/tests/: conftest.py  test_batch_aslr_prompt_allowed.py  test_batch_assume_works_does_not_cancel.py  test_batch_daemonized_nginx_marked_working.py  test_batch_forces_assume_works_toggle.py  test_batch_inter_run_delay.py  test_binary_sanitizer.py  test_build_tool_sudo_escalation.py  test_execute_sanitized_uses_dialog_modules.py  test_instruction_preview_ui.py  test_log_analyzer.py  test_module_selection_dialog.py  test_parser.py  test_pin_runner_metrics_sampling.py  test_sanitize_advanced_knob_range_ui.py  test_sanitize_keep_only_one_per_nop_count.py  test_sanitize_knob_history_dropdowns.py  test_sanitize_progress_dialog_stop_button.py  test_sanitize_worker.py  test_sanitized_output_works_persistence.py  test_sanitized_outputs_multiselect.py  test_sequence_analyzer_ui.py  test_stop_button_terminates_single_sanitized_daemon.py  test_stop_terminates_prerun.py  test_sudo_password_retry_on_failure.py  test_sudo_permission_escalation.py  test_view_metrics_button_and_series.py
(+16 files in other folders)
