[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyside-pin-instruction-logger"
version = "0.1.0"
description = "A PySide application that utilizes Intel PIN to log instructions executed by a specified binary file."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "PySide6==6.6.3",
    "numpy>=1.26",
    "pandas>=2.2"
]

[project.urls]
Homepage = "https://github.com/yourusername/pyside-pin-instruction-logger"
Repository = "https://github.com/yourusername/pyside-pin-instruction-logger"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.0.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.6.0",
    "black>=24.3.0"
]